[build-system]
requires = ["hatchling >= 1.26.3", "pyspark >= 4.0.0.dev2", "paho-mqtt >= 2.1.0"]
build-backend = "hatchling.build"

[project]
name = "python_datasource_connectors"
version = "0.0.2"
authors = [
    { name="Jeffery Annor", email="jeffery.annor@databricks.com" },
    { name="Gaston Guitart", email="gaston.guitart@databricks.com" },
]
description = "A Collection of Custom Data Source Connectors for PySpark"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "src"
]

readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jefferyann-db/python-datasource-connectors"
Issues = "https://github.com/jefferyann-db/python-datasource-connectors/issues"